--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "livekit-client": "^1.14.1",
     "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.289.0",
-    "next": "^14.0.0",
+    "next": "^14.0.1",
     "next-auth": "^4.24.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -47,7 +47,7 @@
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0",
+    "eslint-config-next": "^14.0.1",
     "postcss": "^8",
     "prisma": "^5.5.2",
     "tailwindcss": "^3",
