--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
-    "@livekit/components-react": "^1.3.0",
+    "@livekit/components-react": "1.3.0",
     "@livekit/components-styles": "^1.0.6",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
