--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
