--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.8",
+    "@auth/prisma-adapter": "^1.0.12",
     "@livekit/components-react": "^1.4.1",
     "@livekit/components-styles": "^1.0.7",
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
@@ -38,6 +38,7 @@
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
